--- a/package.json
+++ b/package.json
@@ -19,24 +19,24 @@
   },
   "homepage": "https://github.com/ChrisWen960216/learing-rxjs#readme",
   "devDependencies": {
-    "@types/html-webpack-plugin": "^2.30.3",
-    "@types/node": "^10.0.8",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
-    "html-webpack-plugin": "^3.2.0",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
-    "rxjs": "^6.1.0",
     "style-loader": "^0.21.0",
-    "tslint": "^5.10.0",
-    "tslint-config-alloy": "^0.1.0",
-    "typescript": "^2.8.3",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "rxjs": "^6.1.0"
   }
 }
