--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "env": {
+        "browser": true
+    },
+    "rules":{
+        "no-console": 0,
+        "no-underscore-dangle": 0,
+        "max-len": 0
+    }
 }
