--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-import": "^2.11.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "rxjs-compat": "^6.1.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3",
