--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     "rules":{
         "no-console": 0,
         "no-underscore-dangle": 0,
-        "max-len": 0
+        "max-len": 0,
+        "no-mixed-operators": 0
     }
 }
