Connect react-rxjs

--- a/package.json
+++ b/package.json
@@ -1,43 +1,25 @@
 {
   "name": "learing-rxjs",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev:ts": "tsc",
-    "dev": "webpack-dev-server --config config/webpack.dev.config.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ChrisWen960216/learing-rxjs.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ChrisWen960216/learing-rxjs/issues"
-  },
-  "homepage": "https://github.com/ChrisWen960216/learing-rxjs#readme",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "less": "^3.0.4",
-    "less-loader": "^4.1.0",
-    "rxjs-compat": "^6.1.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
-  },
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "html-webpack-plugin": "^3.2.0",
-    "rxjs": "^6.1.0"
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-scripts": "1.1.4",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0"
   }
 }
