--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,3 @@
 {
-    "extends": "airbnb-base",
-    "env": {
-        "browser": true
-    },
-    "rules":{
-        "no-console": 0,
-        "no-underscore-dangle": 0,
-        "max-len": 0,
-        "no-mixed-operators": 0
-    }
+    "extends": "airbnb-base"
 }
