--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:ts": "tsc",
-    "dev": "webpack-dev-server --config config/webpack.dev.config.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -18,26 +17,12 @@
     "url": "https://github.com/ChrisWen960216/learing-rxjs/issues"
   },
   "homepage": "https://github.com/ChrisWen960216/learing-rxjs#readme",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "less": "^3.0.4",
-    "less-loader": "^4.1.0",
-    "rxjs-compat": "^6.1.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
-  },
   "dependencies": {
-    "html-webpack-plugin": "^3.2.0",
-    "rxjs": "^6.1.0"
+    "parcel": "^1.10.3",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3"
+  },
+  "devDependencies": {
+    "eslint": "^5.8.0"
   }
 }
