--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "rxjs-compat": "^6.3.3"
   },
   "devDependencies": {
-    "eslint": "^5.8.0"
+    "eslint": "^5.8.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
