--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ChrisWen960216/learing-rxjs#readme",
   "dependencies": {
+    "colors": "^1.3.2",
     "parcel": "^1.10.3",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3"
