--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,8 @@
         "browser": true
     },
     "rules": {
-        "no-console": 0
+        "no-console": 0,
+        "no-underscore-dangle": 0,
+        "max-len": ["error", 150]
     }
 }
