--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "colors": "^1.3.2",
     "parcel": "^1.10.3",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3"
+    "rxjs": "^6.3.3"
   },
   "devDependencies": {
     "eslint": "^5.8.0",
